Additional 20/25 lap offers

--- a/src/pug/offers/index.pug
+++ b/src/pug/offers/index.pug
@@ -28,6 +28,26 @@ block content
         ul.race-packages__price-list--packages
           li
             div
+              h3 20 lap practice 
+              p 1 x 20 Laps (15 Minute) Session
+              .race-packages__price-list--packages--carts 
+                p #[span Karts:] SR4 200cc (14+), Junior Racer (8-13)
+            div
+              span £19.80/driver
+              p.sticker 10% Discount
+              a.button.button__primary(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=10discount020lapssinglesessionages8yrssaving220pp' target='_blank') Book Now
+          li
+            div
+              h3 25 lap practice 
+              p 1 x 25 Laps (17 Minute) Session
+              .race-packages__price-list--packages--carts 
+                p #[span Karts:] SR4 200cc (14+), Junior Racer (8-13)
+            div
+              span £22/driver
+              p.sticker 25% Extra Laps
+              a.button.button__primary(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=25extralaps025lapssinglesessionages8yrsincluding5extralaps' target='_blank') Book Now
+          li
+            div
               h3 40 lap practice 
               p 2 x 20 Laps (15 Minute) Sessions
               p Only £15.75 per session
@@ -64,6 +84,26 @@ block content
         h3 Adult Open Karting (12yrs+)
         .red-highlight
         ul.race-packages__price-list--packages
+          li
+            div
+              h3 20 lap practice
+              p 1 x 20 Laps (15 Minute) Session
+              .race-packages__price-list--packages--carts 
+                p #[span Karts:] SR4 200cc (14+), Junior Racer (12-13)
+            div
+              span £19.80/driver
+              p.sticker 10% Discount
+              a.button.button__primary(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=10discount020lapssinglesessionages12yrssaving220pp' target='_blank') Book Now
+          li
+            div
+              h3 25 lap practice
+              p 1 x 25 Laps (17 Minute) Session
+              .race-packages__price-list--packages--carts 
+                p #[span Karts:] SR4 200cc (14+), Junior Racer (12-13)
+            div
+              span £22/driver
+              p.sticker 25% Extra Laps
+              a.button.button__primary(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=25extralaps025lapssinglesessionages12yrsincluding5extralaps' target='_blank') Book Now
           li
             div
               h3 40 lap practice
