--- a/src/css/_partials/typography.styl
+++ b/src/css/_partials/typography.styl
@@ -85,12 +85,12 @@ p
   width 100%
   user-select none
   
-  &__summer
+  &__Spooktober
     color white
     margin 0
     padding 1rem
     border-radius 0
-    background summerDealsGradient
+    background dealsGradient
 
     a
       color white
