--- a/src/pug/_partials/layout.pug
+++ b/src/pug/_partials/layout.pug
@@ -71,9 +71,9 @@ html
       +navigation
 
     block dealSticker
-      .sticker.sticker__Spooktober
+      .sticker.sticker__summer
         .container
-          a(href='/offers') Spooktober Offers now active
+          a(href='/offers') Bonfire Week Offers now active
 
     block content
 
