--- a/src/pug/_partials/navigation.pug
+++ b/src/pug/_partials/navigation.pug
@@ -1,7 +1,7 @@
 mixin navigation(currentPage = '/')
   -
     const navLinks = {
-      "Spooktober Offers"       :'/offers',
+      "Bonfire Week Offers"       :'/offers',
       "Vouchers"            :'https://fastlane.bookmykarting.co.uk/book/385/voucher.aspx',
       'Race Packages'       :'/race-packages',
       'Arrive & Drive'      :'/arrive-and-drive',
