--- a/src/pug/_partials/layout.pug
+++ b/src/pug/_partials/layout.pug
@@ -73,7 +73,7 @@ html
     block dealSticker
       .sticker.sticker__summer
         .container
-          a(href='/offers') Bonfire Week Offers now active
+          a(href='/offers') Christmas Gift Voucher Offers now active
 
     block content
 
