--- a/src/pug/_partials/navigation.pug
+++ b/src/pug/_partials/navigation.pug
@@ -1,8 +1,8 @@
 mixin navigation(currentPage = '/')
   -
     const navLinks = {
-      "Bonfire Week Offers"       :'/offers',
-      "Vouchers"            :'https://fastlane.bookmykarting.co.uk/book/385/voucher.aspx',
+    //-   "Offers"       :'/offers',
+      "Christmas Voucher Offers"            :'https://fastlane.bookmykarting.co.uk/book/385/voucher.aspx',
       'Race Packages'       :'/race-packages',
       'Arrive & Drive'      :'/arrive-and-drive',
       'Juniors & Parties'   :'/juniors-and-parties',
