--- a/src/pug/_partials/layout.pug
+++ b/src/pug/_partials/layout.pug
@@ -73,7 +73,7 @@ html
     block dealSticker
       .sticker.sticker__summer
         .container
-          a(href='https://fastlane.bookmykarting.co.uk/book/385/voucher.aspx' target="_blank") Christmas Gift Voucher Offers now active
+          a(href='/offers') January Blues Offers now active
 
     block content
 
